fix: update project deployment links and button alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -89,6 +89,12 @@
   border-radius: 5px 16px;
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
+    a#herobtn2 {
+   display: flex !important;
+   justify-content: center !important;
+   align-items: center !important;
+}          
+ 
 
 #herobtn2:hover {
   background-color: #414745;
@@ -317,7 +323,7 @@
   background-color: #1b7255;
   color: white;
   cursor: pointer;
-  z-index: 999; 
+  z-index: 999;
 }
 
 /* card-link */
@@ -344,12 +350,10 @@
 }
 
 @media (max-width: 991px) {
- 
   .navbar-nav {
     align-items: flex-end;
   }
 
- 
   .portfolio-hero {
     margin-top: 100px;
   }
